--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Samoel Dametto",
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^9.3.0",
